--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+ul,
+p {
   margin: 0px;
   padding: 0px;
   border: 0px;
@@ -20,18 +22,16 @@ h6 {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  /* margin: 0 auto; */
-}
-.header-container {
-  /* display: flex; */
 }
 /* --------------------------------------------- Шапка --------------------------------------------- */
 .header {
-  /* padding: 24px 215px; */
-  padding-top: 24px;
-  padding-right: 215px;
-  padding-bottom: 25px;
-  padding-left: 215px;
+  padding: 25px 215px;
+  border-bottom: 1px solid #ececec;
+}
+.header-container {
+  display: flex;
+  margin: 0 auto;
+  /* justify-content: space-between; */
 }
 .header-logo {
   font-family: "Raleway", sens-serif;
@@ -42,6 +42,7 @@ h6 {
   color: var(--hover-color);
   text-decoration: none;
   display: inline-block;
+  margin-right: 93px;
 }
 .span-header-logo {
   font-family: "Raleway", sens-serif;
@@ -53,12 +54,13 @@ h6 {
   display: inline-block;
 }
 .header-nav {
-  /* display: flex;
-  align-items: center; */
+  display: flex;
+  align-items: center;
 }
 .header-list {
   list-style: none;
-  /* display: flex; */
+  display: flex;
+  gap: 50px;
 }
 .link {
   text-decoration: none;
@@ -76,8 +78,10 @@ h6 {
   color: var(--hover-color);
 }
 .header-adress {
-  /* list-style: none;
-  display: flex; */
+  list-style: none;
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
 }
 .header-adress-link {
   text-decoration: none;
@@ -100,6 +104,9 @@ h6 {
 /* --------------------------------------------- Герой --------------------------------------------- */
 .hero {
   background-color: var(--background-hero);
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-h-one {
   font-family: "Roboto";
@@ -110,21 +117,23 @@ h6 {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-hover);
+  text-align: center;
+  margin-bottom: 30px;
 }
 .hero-btn {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--secondary-hover);
   background: var(--hover-color);
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  display: inline;
+  width: 216px;
+  height: 50px;
 }
 .hero-btn:hover {
   background-color: #188ce8;
